# Survival-Platform-Game

./: CMakeLists.txt
include/: InitScene.h  Life.h  ObjectPooler.h  UIManager.h  effects.h  enemy.h  enemyManager.h  enemySuperVillain.h  enemyVillain.h  game.h  gameManager.h  map.h  music.h  musicClass.h  plataforma.h  position.h  protagonista.h  screenSize.h  shoot.h
src/: InitScene.cpp  Life.cpp  ObjectPooler.cpp  UIManager.cpp  effects.cpp  enemy.cpp  enemyManager.cpp  enemySuperVillain.cpp  enemyVillain.cpp  game.cpp  gameManager.cpp  main.cpp  map.cpp  music.cpp  musicClass.cpp  plataforma.cpp  protagonista.cpp  shoot.cpp
